[package]
name = "pcap"
version = "0.1.0"
authors = ["Berardino la Torre <berardino.latorre@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
nix = "0.13.0"
libc = "0.2.51"

# Could not compile `nix`.\nprocess didn't exit successfully
# https://github.com/rust-lang/rls/issues/1449
bitflags = "=1.0.4"

[build-dependencies]
bindgen = "0.49.0"

[lib]
name = "pcap"

[[example]]
name = "findalldevs"
path = "examples/findalldevs.rs"

[[example]]
name = "lookupdev"
path = "examples/lookupdev.rs"

[[example]]
name = "lookupnet"
path = "examples/lookupnet.rs"

