[package]
name = "pcap"
version = "0.1.0"
authors = ["Berardino la Torre <berardino.latorre@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
nix = {git = "https://github.com/nix-rust/nix.git"}
libc = { git = "https://github.com/rust-lang/libc" }

# Could not compile `nix`.\nprocess didn't exit successfully
# https://github.com/rust-lang/rls/issues/1449
bitflags = "=1.0.4"

[build-dependencies]
bindgen = "0.49.0"

[lib]
name = "pcap"

[[example]]
name = "findalldevs"
path = "examples/findalldevs.rs"

[[example]]
name = "lookupdev"
path = "examples/lookupdev.rs"

[[example]]
name = "lookupnet"
path = "examples/lookupnet.rs"

